# AmpereSparseMatmul

./: .gitignore  README.md  learn.md  ptx.md
1.basic_function/: sparse_mmad_data.py  sparse_mmad_zhk.cu
2.microbenchmark/: test_sp_mmad_16832_latency.cu
3.numpy/: im2col.py
4.conv-c/: conv.c  conv.h
5.tvm/: tvm-conv.py  tvm-cuda.py  tvm_example.py
6.spmma-example/: Makefile  spmma.cu  spmma_example.cpp  spmma_example.cpp1.ii  spmma_example.cpp4.ii  spmma_example.cu  spmma_example.cudafe1.c  spmma_example.cudafe1.cpp  spmma_example.cudafe1.gpu  spmma_example.cudafe1.stub.c  spmma_example.module_id
6.tvm-tile/: tile.py
7.cuda-dev/: CMakeLists.txt  Makefile  Makefile_old  a.out  cublas_gemm.cpp  cuda_utils.h  cudnn_conv.cpp  cudnn_example.cpp  gemm.cpp  gemm.cu  generate_data.py  report1.qdrep  report1.sqlite  report2.qdrep  report2.sqlite  spmma.cpp  spmma_example  spmma_example.cpp  spmma_oo.cpp  spmma_oo.hpp  t1.txt  test.cpp
7.cuda-dev/kernel_5x5/16x16/: code.txt
7.cuda-dev/kernel_7x7/16x16/: code.txt
7.cuda-dev/kernel_9x9/16x16/: code.txt
7.cuda-dev/old_code/: spmma.cpp  spmma_example.cu  spmma_oo.cpp  spmma_utils.hpp
7.cudnn/: cudnn-example.cu
8.caffe-im2col/: common.hpp  im2col.cu  im2col.hpp
8.cudnn_example/: cudnn_example.cpp  gemm.cu
8.input-handle/: input_handle.py
9.spmma/: Makefile  spmma.cu  spmma.hpp  utils.hpp
